<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_screen_background"
    tools:context=".gameScenes.MainActivity">

    <ImageView
        android:id="@+id/mainScreenSphere1"
        android:layout_width="687dp"
        android:layout_height="1042dp"
        android:layout_marginTop="350dp"
        android:contentDescription="@string/content_desc_main_screen_sphere_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/main_screen_sphere2" />

    <ImageView
        android:id="@+id/mainScreenSphere2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="404dp"
        android:contentDescription="@string/content_desc_main_screen_sphere_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/main_screen_sphere3" />

    <ImageView
        android:id="@+id/mainScreenSphere3"
        android:layout_width="523dp"
        android:layout_height="917dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="232dp"
        android:contentDescription="@string/content_desc_main_screen_sphere_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/main_screen_sphere1"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/mainScreenCanvasUsername"
        android:layout_width="0dp"
        android:layout_height="95dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/content_desc_main_screen_canvas_username"
        app:layout_constraintBottom_toBottomOf="@+id/usernameID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/usernameID"
        app:srcCompat="@drawable/main_screen_main_canvas"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/mainScreenCanvasPassword"
        android:layout_width="0dp"
        android:layout_height="95dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/content_desc_main_screen_canvas_password"
        app:layout_constraintBottom_toBottomOf="@+id/passwordID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/passwordID"
        app:srcCompat="@drawable/main_screen_main_canvas"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/buttonguest"
        android:layout_width="295dp"
        android:layout_height="46dp"
        android:layout_marginBottom="-150dp"
        android:contentDescription="@string/content_desc_guest_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainScreenCanvasPassword"
        app:srcCompat="@drawable/main_screen_main_canvas"
        tools:ignore="ImageContrastCheck,RedundantDescriptionCheck" />

    <ImageView
        android:id="@+id/mainScreenFace"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/content_desc_main_screen_face"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/main_screen_face" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/usernameID"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="288dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/grobold"
        android:hint="@string/text_hint_e_mail"
        android:textColor="#736935"
        android:textColorHint="#736935"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passwordID"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/grobold"
        android:hint="@string/text_hint_password"
        android:inputType="textPassword"
        android:textColor="#736935"
        android:textColorHint="#736935"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameID" />

    <ImageButton
        android:id="@+id/registerButton"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/content_desc_register_button"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainScreenCanvasPassword"
        app:srcCompat="@drawable/main_screen_login_canvas"
        tools:ignore="ImageContrastCheck,RedundantDescriptionCheck" />

    <ImageButton
        android:id="@+id/loginButton"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/content_desc_login_button"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainScreenCanvasPassword"
        app:srcCompat="@drawable/main_screen_login_canvas"
        tools:ignore="RedundantDescriptionCheck" />

    <TextView
        android:id="@+id/nextText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/grobold"
        android:text="@string/text_login"
        android:textColor="#736935"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="@+id/loginButton"
        app:layout_constraintStart_toStartOf="@+id/loginButton"
        app:layout_constraintTop_toTopOf="@+id/loginButton"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/grobold"
        android:text="@string/text_register"
        android:textColor="#736935"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/registerButton"
        app:layout_constraintEnd_toEndOf="@+id/registerButton"
        app:layout_constraintStart_toStartOf="@+id/registerButton"
        app:layout_constraintTop_toTopOf="@+id/registerButton"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textRegister2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/grobold"
        android:text="@string/text_play_as_guest"
        android:textColor="#736935"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonguest"
        app:layout_constraintEnd_toEndOf="@+id/buttonguest"
        app:layout_constraintStart_toStartOf="@+id/buttonguest"
        app:layout_constraintTop_toTopOf="@+id/buttonguest"
        tools:ignore="TextContrastCheck" />

    <Switch
        android:id="@+id/switchLogIn"
        android:layout_width="153dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/main_screen_login_canvas"
        android:fontFamily="@font/grobold"
        android:paddingHorizontal="15dp"
        android:text="@string/text_auto_log_in"
        android:textAlignment="center"
        android:textColor="#736935"
        app:layout_constraintBottom_toTopOf="@+id/buttonguest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/registerButton"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>