<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/score_background"
    tools:context=".gameScenes.LeaderBoardActivity">

    <ImageView
        android:id="@+id/scoreSphere1"
        android:layout_width="287dp"
        android:layout_height="290dp"
        android:layout_marginEnd="-120dp"
        android:layout_marginBottom="-100dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/content_desc_score_sphere_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/score_sphere2"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/scoreSphere2"
        android:layout_width="369dp"
        android:layout_height="369dp"
        android:layout_marginStart="-180dp"
        android:layout_marginTop="-150dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/content_desc_score_sphere_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/score_sphere1" />

    <ImageView
        android:id="@+id/scoreSphere3"
        android:layout_width="318dp"
        android:layout_height="313dp"
        android:layout_marginTop="-180dp"
        android:layout_marginEnd="-150dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/content_desc_score_sphere_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04"
        app:srcCompat="@drawable/score_sphere4" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/leaderBoardRecycler"
        android:layout_width="410dp"
        android:layout_height="478dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/score_background"

        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreLeaderBoardID">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/scoreLeaderBoardID"
        android:layout_width="201dp"
        android:layout_height="54dp"
        android:background="@drawable/score_name_canvas"
        android:fontFamily="@font/grobold"
        android:gravity="center"
        android:text="@string/text_leaderboard"
        android:textColor="#FFD2D2"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreFace"
        app:layout_constraintVertical_bias="0.042" />

    <ImageView
        android:id="@+id/scoreFace"
        android:layout_width="176dp"
        android:layout_height="146dp"
        android:scaleType="centerInside"
        android:contentDescription="@string/content_desc_score_face"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051"
        app:srcCompat="@drawable/score_face" />

    <ImageView
        android:id="@+id/scoreHomeButton"
        android:layout_width="68dp"
        android:layout_height="71dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/content_desc_score_home_button"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.68"
        app:layout_constraintStart_toEndOf="@+id/scoreFace"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/score_home"
        tools:ignore="RedundantDescriptionCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>